# animus-server

./: .dockerignore  .env.example  .gitignore  .releaserc.json  AGENTS.md  CHANGELOG.md  Dockerfile  LICENSE  README.md  alembic.ini  commitlint.config.cjs  docker-compose.yaml  old-2.md  old-3.md  old.md  package-lock.json  package.json  pyproject.toml  skills-lock.json
.github/: pull_request_template.md
.github/workflows/: cd-docker.yml  cd.yml  ci.yml  release.yml
.husky/: commit-msg
documentation/: ani-77-spec.md  ani-95-spec.md  architecture.md  database-migration-troubleshooting.md  tooling.md
documentation/features/: ani-100-spec.md  ani-120-spec.md  endpoint-PDF-spec.md  endpoint-atualizacao-usuario-plano.md  endpoint-atualizacao-usuario-spec.md  retomar-usuario-spec.md
documentation/plans/: ani-119-plan.md  ani-120-plan.md  ani-77-plan.md  ani-99-plan.md
documentation/prompts/: commit-code-prompt.md  conclude-bug-report-prompt.md  conclude-spec-prompt.md  create-jira-ticket-prompt.md  create-jira-tickets-prompt.md  create-layer-rules-prompt.md  create-plan-prompt.md  create-pr-prompt.md  create-prd-prompt.md  create-prompt-prompt.md  create-spec-prompt.md  create-tests-prompt.md  fix-bug-prompt.md  fix-side-effect-prompt.md  implement-plan-prompt.md  implement-spec-prompt.md  refine-doc-prompt.md  register-antipattern-prompt.md  resolve-pr-conversations-prompt.md  review-code-prompt.md  suggest-issues-prompt.md  update-archtecture-prompt.md  update-overview-prompt.md  update-spec-prompt.md
documentation/rules/: ai-layer-rules.md  code-conventions-rules.md  controllers-testing-rules.md  core-layer-rules.md  database-layer-rules.md  jobs-testing-rules.md  pipes-layer-rules.md  pubsub-layer-rules.md  rest-layer-rules.md  routers-layers-rules.md  rules.md  testing-rules.md  use-cases-testing-rules.md
migrations/: env.py
migrations/versions/: 18c75d9f3331_merge_folders_head_with_final_rank_head.py  20260319_000001_create_accounts_table.py  20260327_120000_create_petitions_and_summaries_tables.py  20260328_110000_create_analyses_table.py  20260328_150000_create_analysis_precedents_table.py  20260330_120000_update_petition_summaries_structure.py  20260404_110000_add_on_delete_cascade_to_intake_foreign_keys.py  20260404_120000_add_petitions_analysis_fk_cascade.py  20260415_120000_add_analysis_precedents_filters_columns.py  20260418_120000_rename_applicability_to_similarity_percentage.py  20260418_130000_add_analysis_precedent_scores_columns.py  20260418_140000_expand_precedent_status_column.py  20260420_120000_create_analysis_precedent_feedback_tables.py  20260420_120000_create_folders_table.py  20260423_010000_add_petition_summary_extended_fields.py  20260425_180000_create_analysies_precedent_legal_features_table.py  20260425_235000_add_legal_features_columns_to_dataset_rows.py  20260426_120000_migrate_legal_features_to_new_schema.py  20260426_130000_drop_unused_legal_features_columns.py  20260426_160000_add_final_rank_to_analysis_precedents.py  20260511_120000_intake_analysis_documents_case_summaries_and_drafts.py  20260514_120000_create_extracted_petitions_table.py  20260516_143500_rename_judgment_drafts_table.py  20260517_223000_restructure_second_instance_judgment_drafts.py  20260522_120000_restructure_petition_drafts.py  20260527_120000_merge_petition_drafts_and_manual_precedents_heads.py  20260527_130000_reconcile_intake_schema_with_models.py  20260604_150000_case_assessment_briefings_and_multi_documents.py  20260604_160000_create_second_instance_decisions.py  2ee630b3a47c_merge_cascade_fk_and_analyses_branches.py  4249bef21384_drop_analysis_summary_column.py  4ab74425d1ee_head.py  4d2d879df9c5_add_is_manually_added_to_analysis_.py  665569c27179_make_password_hash_null.py  8cb87a9d6608_make_password_hash_null.py  a7076e5f1905_.py  bb5751bdd2fd_.py  (+4 more)
scripts/: install-skills.sh  skills-lock.json  sync-commands.sh
src/: main.py
tests/: conftest.py
(+875 files in other folders)
